--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="email">
               <span>
                 Email us to request a demo and be in our waiting list for the
-                <strong>Febuary 2017</strong> release!
+                <strong>Febuary 2023</strong> release!
               </span>
               <div class="button">Join the waiting list</div>
             </div>
@@ -168,7 +168,7 @@ $background-color_6: #9b9b9b; -->
       <footer>
         <div class="content">
           <span class="copyright">© 2016 Fotomatic, All Rights Reserved</span>
-          <span class="location">Designed in NYC</span>
+          <span class="location">Designed in Berlin</span>
         </div>
       </footer>
     </div>
