--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Fotomatic</title>
     <link
       href="https://fonts.googleapis.com/css?family=Damion"
       rel="stylesheet"
